# Nobi

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
browser-extension/: README.md  background.js  manifest.json
docs/: ARCHITECTURE.md  RELEASE.md  TRANSLATION.md  chat-bot-edge-function.md  chat-bot-webhook.sql  chat-supabase-setup.sql
docs/memory/: 3d-preview-plan.md  MEMORY.md  app-tsx-null-byte.md  audio-editor.md  chat-system.md  desktop-tools-roadmap.md  dobby-nobi-distribution.md  floating-reference-window-plan.md  gringotts-project.md  library-portability-features.md  pet-agent.md  push-memory-to-public-repo.md  release-process.md  translation-system.md  vault-mode-plan.md  web-mirror-window-plan.md
scripts/: build-ecdict-mini.mjs  make-ecdict-fixture.mjs  make-icon.cjs  make-latest-json.mjs  nobi-mcp.mjs
scripts/chat-bot/: README.md  bot.mjs  config.example.json
src/: App.css  App.tsx  Board.tsx  api.ts  main.tsx  panels.tsx  selectionTranslatePosition.ts  types.ts  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: chat-window.json  default.json  pet-window.json  ref-window.json  selection-translate.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  ai.rs  backup.rs  collect.rs  db.rs  docs.rs  lib.rs  library.rs  main.rs  mcp_api.rs  nmt.rs  selection_translate.rs  settings.rs  thumbs.rs  translation.rs  wallpaper_audio.rs  wallpaper_media.rs  wallpaper_stream.rs  watch.rs
src/audio/: dsp.ts
src/board/: BoardCanvas.tsx  board.css  shortcuts.ts  store.ts
src/chat/: avatar.ts  config.ts  customBackend.ts  index.ts  liar.ts  ludo.ts  setupSql.ts  supabaseBackend.ts  types.ts  uno.ts
src/components/: AudioEditor.tsx  ChatWindow.css  ChatWindow.tsx  CmdManagerModal.tsx  DocEditor.css  DocEditor.tsx  FolderTree.tsx  GameChat.css  GameChat.tsx  ImageViewer.css  Inspector.tsx  LiarGame.css  LiarGame.tsx  LudoGame.css  (+22 more)
wallpaper-renderer/: README.md  audio.js  boot.js  index.html  main.js  package-lock.json  package.json  particles.js  shaders.js
(+3 files in other folders)
