[package]
name = "nobi"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nobi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-drag = "2" # 素材拖出到外部应用（原生 OLE/NSDragging）
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
notify = "6" # 文件夹实时监听：导入的目录有新文件→自动入库
imagesize = "0.13"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tiny_http = "0.12"
tokio = { version = "1", features = ["time"] }
# 离线神经翻译（OPUS-MT / Marian，onnxruntime）—— 整句离线兜底，不依赖本地大模型或联网
ort = "2.0.0-rc.12"
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }

# 全局快捷键（看球小窗老板键 Alt+`、直开窗透明度 Alt+- / Alt+=）—— 桌面端专属
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"

# 直开看球窗：原生窗口 alpha（SetLayeredWindowAttributes）+ 老板键静音（WebView2 IsMuted）—— 仅 Windows
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Accessibility", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_Threading"] }
webview2-com = "0.38"
